[gd_scene load_steps=2 format=3 uid="uid://cp7jtjmcxyxlm"]

[ext_resource type="Script" uid="uid://dnl6no1h6mn5p" path="res://tree_graph_edit.gd" id="1_0sg4w"]

[node name="TreeGraphEdit" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
right_disconnects = true
minimap_opacity = 0.6
show_zoom_label = true
script = ExtResource("1_0sg4w")

[node name="ContextMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
item_count = 1
item_0/text = "Connect"
item_0/id = 0

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="popup_request" from="." to="." method="_on_popup_request"]
